06-ingress-controllers/other-app/other-service.yml
kind: Service
apiVersion: v1
metadata:
  name: other-service
spec:
  selector:
    app: other-app
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
