06-ingress-controllers/other-app/other-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: echo-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: other-ingress
  namespace: default
spec:
  rules:
  - host: my-host
    http:
      paths:
        - path: /other-path
          backend:
            serviceName: other-service
            servicePort: 80
